[package]
name = "rclrs"
version = "0.1.0"
authors = ["MarshalSHI <marshalshi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.54.1"

# Won't try to test doctest since there are errors in ROS2 C code.
# We assume ROS2 is good here.
[lib]
doctest = false

[dependencies]
log = "0.4"
env_logger = "0.7"
